# WitHub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/nanopb/: CMakeLists.txt  gen.sh
main/: CMakeLists.txt
main/include/: scan_callback.h  utils.h  wifi_entity.h  wit_device.h  wlan_manager.h
main/src/: app_main.cpp  utils.cpp  wlan_manager.cpp
